[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vincent Lee <greatz613@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 어떤 형태의 경로든 기술할 수 있지만, 커뮤니티의 관습을 따른다.
# 'name' 필드를 사용해서 라이브러리 이름을 지정한다. 지정하지 않으면,
# cargo는 'package.name'을 사용한다. 우리가 원하는 바다.
[lib]
path = "src/lib.rs"

# 이중 대괄호를 사용한 것에 주의하자.TOML에서의 배열 표기 문법니다.
# 프로젝트에 하나의 라이브러리는 물론, 여러 바이너리를 포함할 수도 있다.
# 동일한 저장소에서 여러 라이브러리를 관리하고자 한다면,
# workspace 피처를 살펴보기 바란다. 뒤에서 이에 관해 다룰 것이다.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio={ version = "1", features = ["macros", "rt-multi-thread"] }
